# Bridge_Hackathon_2026-Korea_Japan_GDGoC-team_11

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml
aihackathon/hackathon/: app.json  package-lock.json  (+1 more)
application/: app.json  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  diary.py  report.py  song.py  therapist.py
backend/app/core/: config.py  dependencies.py  enums.py  gemini_client.py  llm_client.py  rate_limit.py  security.py  spotify_client.py
backend/app/data/: therapists.json
backend/app/db/: database.py  init_db.py
backend/app/entity/: __init__.py  conversation_entity.py  diary_entry_entity.py  emotion_analysis_entity.py  festival_entity.py  festival_like_entity.py  message_entity.py  report_entity.py  seoul_event_entity.py  seoul_event_like_entity.py  song_recommendation_entity.py  therapist_entity.py  user_entity.py  weekly_report_entity.py
backend/app/models/: chat.py  diary.py  emotion.py  festival.py  report.py  seoul_event.py  song.py  therapist.py  user.py
backend/app/repository/: base_repo.py  conversation_repo.py  diary_repo.py  emotion_repo.py  festival_like_repo.py  festival_repo.py  report_repo.py  seoul_event_like_repo.py  seoul_event_repo.py  song_repo.py  therapist_repo.py  user_repo.py  weekly_report_repo.py
backend/app/services/: chatbot_service.py  collect_event.py  diary_analysis_service.py  diary_service.py  embedding_service.py  prompts.py  report_service.py  song_service.py  therapist_service.py
backend/app/services/chat_service/: graph.py  prompts.py  types.py
backend/app/worker/: collect_event_worker.py  embedding_processor.py
backend/scripts/: smoke.sh
backend/supabase/: schema.sql
chartmaker/: company_list.xlsx
frontend/: Dockerfile  README.md  package.json
malilib-ornithe-1.12.2/: gradle.properties
(+203 files in other folders)
