[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Bridge Hackathon 2026 — GDGoC Team 1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain>=0.3",
    "openai>=1.40",
    "google-genai>=0.3",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# B008: FastAPI's Depends(...) is meant to be used as a default value.
# N802: SessionLocal is a class-style factory name (SQLAlchemy convention).
ignore = ["B008", "N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
